--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": false,
   "dependencies": {
+    "@angular-devkit/schematics": "^10.2.0",
     "@angular/animations": "~8.2.14",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
