--- a/projects/ng-bootstrap-datetime-angular/package.json
+++ b/projects/ng-bootstrap-datetime-angular/package.json
@@ -16,6 +16,9 @@
     "type": "git",
     "url": "https://github.com/danilomx/ng-bootstrap-datetime-angular"
   },
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "peerDependencies": {
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14"
